// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge snapshot color blue 1`] = `
<div
  class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 bg-blue-600 border-blue-100 text-white rounded-full top-0  right-1"
/>
`;

exports[`Badge snapshot color gray 1`] = `
<div
  class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 bg-gray-600 border-gray-100 text-white rounded-full top-0  right-1"
/>
`;

exports[`Badge snapshot color green 1`] = `
<div
  class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 bg-green-600 border-green-100 text-white rounded-full top-0  right-1"
/>
`;

exports[`Badge snapshot position bottom 1`] = `
<div
  class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 bg-gray-600 border-gray-100 text-white rounded-full right-1 bottom-3"
/>
`;

exports[`Badge snapshot position top 1`] = `
<div
  class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 bg-gray-600 border-gray-100 text-white rounded-full top-0  right-1"
/>
`;

exports[`Badge snapshot shape circle 1`] = `
<div
  class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 bg-gray-600 border-gray-100 text-white rounded-full top-0  right-1"
/>
`;

exports[`Badge snapshot shape square 1`] = `
<div
  class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 bg-gray-600 border-gray-100 text-white rounded-sm top-0  right-1"
/>
`;

exports[`Badge snapshot size size 1`] = `
<div
  class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 w-4 h-4 bg-gray-600 border-gray-100 text-white rounded-full -top-2 right-3"
/>
`;

exports[`Badge snapshot size sm 1`] = `
<div
  class="absolute border-solid border-gray-100 text-center font-medium uppercase leading-none antialiased p-1 bg-gray-600 border-gray-100 text-white rounded-full top-0  right-1"
/>
`;
